[tool.poetry]
name = "pandas_tutorial"
version = "0.1.0"
description = ""
authors = ["gepuro <gepuro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.3"
ipython = "^7.21.0"
nbconvert = "^6.0.7"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
